--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "borsh": "^0.4.0",
     "eventemitter3": "^4.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,6 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:program": "cargo build-bpf --manifest-path=./program/Cargo.toml --bpf-out-dir=program/dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
